Adds in consistent events (always passing instance handle) for starting and stopping sounds in the sound driver. Adds functionality for hasSubtitle and getSubtitle by passing an instanceHandle.

--- a/support/proxy/vwf.example.com/sound/soundManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/sound/soundManager.vwf.yaml
@@ -9,9 +9,12 @@ methods:
   isSoundPlaying:
   isInstancePlaying:
   setVolume:
+  hasSubtitle:
+  getSubtitle:
   stopSoundInstance:
   stopAllSoundInstances:
 events:
   soundFinished:
+  soundStarted:
   playSubtitle:
 
