--- a/public/duck/index.vwf.yaml
+++ b/public/duck/index.vwf.yaml
@@ -13,36 +13,16 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
-properties:
-  navmode: none
-  rotationSpeed: 10
-methods:
-  initializeCamera:
 children:
   duck:
     extends: http://vwf.example.com/node3.vwf
-    # # 2: Uncomment to apply the spin-on-click behavior
-    # # ... located in public/types/spin-on-click.vwf.yaml
     implements:
     - http://vwf.example.com/spin-on-click.vwf
     source: duck.dae
     type: model/vnd.collada+xml
     properties:
-      rotation: [ 1, 0, 0, 0 ]
       # spin-on-click configuration parameters
-      spin-rate: 1
       spin-axis: [ 0, 0, 1 ]
-    # # 1: Uncomment to jump up on each click
-    # scripts:
-    # - |
-    #   this.pointerClick = function() {
-    #     var rot = this.rotation;
-    #     this.rotation = [ rot[0], rot[1] , rot[2], rot[3] + 1 ];
-    #   }
-  sceneCenter:
-    extends: http://vwf.example.com/node3.vwf
-    properties:
-      translation: [ 0, 0, 0 ]
   point1:
     extends: http://vwf.example.com/light.vwf
     properties:
@@ -64,13 +44,10 @@ children:
 scripts:
 - |
     this.initialize = function(){
-      this.future( 0 ).initializeCamera();
-    }
-
-    this.initializeCamera = function() {
       this.camera.transform = [ -1,   0,  0, 0, 
                                  0,  -1,  0, 0, 
                                  0,   0,  1, 0, 
                                 16, 600, 90, 1 ];
       this.camera.far *= 4;
+      this.camera.navmode = "none";
     }
