--- a/public/agi/test/czml/index.vwf.yaml
+++ b/public/agi/test/czml/index.vwf.yaml
@@ -20,7 +20,7 @@ children:
   camera:
     extends: http://vwf.example.com/cesium/camera.vwf
   earth:
-    extends: http://vwf.example.com/cesium/centralBody.vwf
+    extends: http://vwf.example.com/cesium/globe.vwf
   sun: 
     extends: http://vwf.example.com/cesium/sun.vwf 
   atmosphere: 
