--- a/public/agi/test/polygon/index.vwf.yaml
+++ b/public/agi/test/polygon/index.vwf.yaml
@@ -21,7 +21,7 @@ children:
   camera:
     extends: http://vwf.example.com/cesium/camera.vwf
   earth:
-    extends: http://vwf.example.com/cesium/centralBody.vwf 
+    extends: http://vwf.example.com/cesium/globe.vwf 
   atmosphere: 
     extends: http://vwf.example.com/cesium/atmosphere.vwf 
   skybox: 
