Improve duck lighting (credit goes to @davideaster for this commit)

--- a/public/duck/index.vwf.yaml
+++ b/public/duck/index.vwf.yaml
@@ -13,6 +13,8 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
+properties:
+  ambientColor: [ 50, 50, 50 ]
 children:
   duck:
     extends: http://vwf.example.com/node3.vwf
@@ -23,24 +25,30 @@ children:
     properties:
       # spin-on-click configuration parameters
       spin-axis: [ 0, 0, 1 ]
-  point1:
+  directional1:
     extends: http://vwf.example.com/light.vwf
     properties:
-      lightType: "point"
+      lightType: "directional"
       enable: true
-      distance: 2000
-      intensity: 2
-      color: [ 128, 128, 128 ]
-      translation: [ -400, 400, -900 ]
-  point2:
+      intensity: 0.75
+      color: [ 255, 255, 255 ]
+      translation: [ 400, 400, 100 ]
+  directional2:
     extends: http://vwf.example.com/light.vwf
     properties:
-      lightType: "point"
+      lightType: "directional"
       enable: true
-      distance: 2000
-      intensity: 2
-      color: [ 128, 128, 128 ]
-      translation: [ 400, 400, 900 ]
+      intensity: 0.33
+      color: [ 255, 255, 255 ]
+      translation: [ -600, 400, -100 ]
+  directional3:
+    extends: http://vwf.example.com/light.vwf
+    properties:
+      lightType: "directional"
+      enable: true
+      intensity: 0.67
+      color: [ 255, 255, 255 ]
+      translation: [ 0, -400, 100 ]
 scripts:
 - |
     this.initialize = function(){
