Adds layers and correctly creates them and adds them to the parent

--- a/public/kineticjs/index.vwf.yaml
+++ b/public/kineticjs/index.vwf.yaml
@@ -1,2 +1,7 @@
 --- 
 extends: http://vwf.example.com/kinetic/stage.vwf
+children:
+  layer1:
+    extends: http://vwf.example.com/kinetic/layer.vwf
+  layer2:
+    extends: http://vwf.example.com/kinetic/layer.vwf
