--- a/support/proxy/vwf.example.com/kinetic/image.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/image.vwf.yaml
@@ -4,4 +4,11 @@
 extends: http://vwf.example.com/kinetic/shape.vwf
 properties:
   image:
+	set: |
+    if ( value !== this.image ) {
+      this.image = value;
+      this.imageChanged( value );
+    }  	
   crop:
+events:
+  imageChanged:
