Add "stroke" and "strokeWidth" properties to kinetic/line.vwf.yaml

--- a/support/proxy/vwf.example.com/kinetic/line.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/line.vwf.yaml
@@ -4,5 +4,7 @@
 extends: http://vwf.example.com/kinetic/shape.vwf
 properties:
   points:
-  tension:
-  closed:
+  tension: 0
+  closed: false
+  stroke: "#000000"
+  strokeWidth:
