Attempted to add the ability to delete a child, not being called

--- a/support/proxy/vwf.example.com/kinetic/container.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/container.vwf.yaml
@@ -4,4 +4,7 @@
 extends: http://vwf.example.com/kinetic/node.vwf
 properties: 
   clipFunc:
-
+method:
+  deleteChildNode:
+scripts:
+- source: "http://vwf.example.com/kinetic/container.js"
