--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -8,6 +8,7 @@ properties:
   width:
   height:
   visible:
+  isVisible:
   listening:
   id:
   name:
@@ -29,6 +30,8 @@ properties:
   absoluteTransform:
   absoluteOpacity:
   absoluteZIndex:
+methods:
+  toggleVisibilty:
 events:
   pointerMove:
   pointerOut:
