Corrects per user drawing

--- a/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
@@ -2,14 +2,16 @@
 extends:
   http://vwf.example.com/kinetic/stage.vwf
 properties:
-  drawing_mode: none
-  drawing_visible: inherit
-  drawing_color: red
-  drawing_width: 4
-  drawing_parentPath: //
-  drawing_opacity: 0.4
-events:
+  drawing_clients:
+methods:
   update:
+  clientWatch:
+  clientJoin:
+  clientLeave:
+  setUpPrivate:
+  setClientUIState:
+  isValid:
+events:
   pointerDown:
   pointerMove:
   pointerUp:
