Added property to set planes doublesided

--- a/support/proxy/vwf.example.com/graphtool/graph.vwf.yaml
+++ b/support/proxy/vwf.example.com/graphtool/graph.vwf.yaml
@@ -93,6 +93,7 @@ methods:
       - size
       - color
       - opacity
+      - doubleSided
       - renderTop
       - name
       - optionalProperties
@@ -106,6 +107,7 @@ methods:
           "size": size,
           "color": color,
           "opacity": opacity,
+          "doubleSided": doubleSided,
           "renderTop": renderTop
         }
       }
