--- a/public/graphtool/index.vwf.yaml
+++ b/public/graphtool/index.vwf.yaml
@@ -60,6 +60,7 @@ children:
           size: 10
           color: [ 50, 100, 200 ]
           opacity: 1
+          doubleSided: true
           renderTop: false
 scripts: |
   this.initialize = function() {
