--- a/support/proxy/vwf.example.com/kinetic/line.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/line.vwf.yaml
@@ -3,8 +3,8 @@
 --- 
 extends: http://vwf.example.com/kinetic/shape.vwf
 properties:
-  points:
+  points: []
   tension: 0
   closed: false
   stroke: "#000000"
-  strokeWidth:
+  strokeWidth: 1
