- add support for stopping a sound group.

--- a/support/proxy/vwf.example.com/sound/soundManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/sound/soundManager.vwf.yaml
@@ -14,6 +14,7 @@ methods:
   getSubtitle:
   getDuration:
   stopSoundInstance:
+  stopSoundGroup:
   stopAllSoundInstances:
 events:
   soundFinished:
