Adds touch events and fixes the arrow drawing

--- a/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
@@ -12,9 +12,15 @@ methods:
   setClientUIState:
   isValid:
 events:
+  down:
+  move:
+  up:
   pointerDown:
   pointerMove:
   pointerUp:
+  touchStart:
+  touchMove:
+  touchEnd:
   shapeCreated:
   textCreated:
   imageCreated:
