Several fixes for the drawing objects after implementing the Stages coordinates

--- a/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
@@ -22,7 +22,7 @@ events:
   touchStart:
   touchMove:
   touchEnd:
-  shapeCreated:
+  drawingObjectCreated:
   textCreated:
   imageCreated:
 scripts:
