--- a/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
@@ -25,5 +25,6 @@ events:
   drawingObjectCreated:
   textCreated:
   imageCreated:
+  findChild:
 scripts:
 - source: "http://vwf.example.com/kinetic/drawing.js"
