Save the model x and y values of a kinetic node separately so view can alter
This affects other properties: position, transform, absolutePosition, absoluteTransform.  I "unimplemented" some getters and setters that didn't actually have kinetic API functions backing them up.  We can implement them when they become necessary.

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -27,7 +27,11 @@ properties:
   zIndex:
   dragBoundFunc:
   absolutePosition:
-  absoluteTransform:
+  # TODO: Define in the kinetic model driver a setter for this property and a getter that does not 
+  #       directly call the kinetic getAbsoluteTransform since the value in kinetic might have 
+  #       view-specific values in it since we allow the views to have their stages dragged 
+  #       independently
+  # absoluteTransform:
   absoluteOpacity:
   absoluteZIndex:
 methods:
