--- a/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
@@ -3,6 +3,7 @@ extends:
   http://vwf.example.com/kinetic/stage.vwf
 properties:
   drawing_clients:
+  drawing_index: 1
 methods:
   update:
   clientWatch:
