--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -27,13 +27,10 @@ properties:
   zIndex:
   dragBoundFunc:
   absolutePosition:
-  # TODO: Define in the kinetic model driver a setter for this property and a getter that does not 
-  #       directly call the kinetic getAbsoluteTransform since the value in kinetic might have 
-  #       view-specific values in it since we allow the views to have their stages dragged 
-  #       independently
-  # absoluteTransform:
+  absoluteTransform:
   absoluteOpacity:
   absoluteZIndex:
+  uniqueInView:
 methods:
   toggleVisibilty:
 events:
