--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -31,6 +31,7 @@ properties:
   absoluteOpacity:
   absoluteZIndex:
   uniqueInView:
+  dragProperty: "position"
 methods:
   toggleVisibilty:
 events:
