Defines draggable events for kinetic/nodes

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -51,7 +51,8 @@ events:
   dragStart:
   dragMove:
   dragEnd:
-  userEventComplete:
+  userDragStart:
+  userDragEnd:
 scripts:
 - source: "http://vwf.example.com/kinetic/node.js"
 
