Remove jitter from locally-dragged kinetic node

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -51,6 +51,7 @@ events:
   dragStart:
   dragMove:
   dragEnd:
+  draggingFromView:
 scripts:
 - source: "http://vwf.example.com/kinetic/node.js"
 
