Correct the typo in the function name toggleVisibility. Move the first reference to this.visible in toggleVisbility so that gotProperty doesn't fire prematurely.

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -33,7 +33,7 @@ properties:
   uniqueInView:
   dragProperty: "position"
 methods:
-  toggleVisibilty:
+  toggleVisibility:
 events:
   pointerMove:
   pointerOut:
