--- a/public/duck/index.vwf.config.yaml
+++ b/public/duck/index.vwf.config.yaml
@@ -14,3 +14,8 @@
 ---
 info:
   title: "VWF Duck Application"
+model:
+  vwf/model/threejs:
+  vwf/model/buzz:
+view:
+  vwf/view/threejs: "#vwf-root"
