Add sceneGetter behavior that gives a node access to the scene node

--- a/support/proxy/vwf.example.com/lesson/task.vwf.yaml
+++ b/support/proxy/vwf.example.com/lesson/task.vwf.yaml
@@ -16,6 +16,8 @@
 
 --- 
 extends: http://vwf.example.com/node.vwf
+implements:
+  - http://vwf.example.com/sceneGetter.vwf
 properties:
 
   ## Text to display to the user to explain the task
