Add preserve-script-closures to config for apps that need it with new event-handler fix
This is not an exclusive list.  We need to continue testing, starting with test/UTF8

--- a/public/bzflag/index.vwf.config.yaml
+++ b/public/bzflag/index.vwf.config.yaml
@@ -16,3 +16,5 @@ model:
   vwf/model/threejs:
 view:
   vwf/view/threejs: { application-root: "#vwf-root", experimental-disable-inputs: true }
+configuration:
+  preserve-script-closures: true
