--- a/public/shader-material/index.vwf.yaml
+++ b/public/shader-material/index.vwf.yaml
@@ -66,16 +66,16 @@ children:
               color.g *= ( sin( time ) + 0.75 ) * 0.25 + depth;
               color.b *= ( sin( time * 1.25 ) + 0.75 ) * 0.25 + depth;
               float intensity;
-              vec3 l = ( viewMatrix * vec4( lightDir, 0.0 ) ).xyz;
-              intensity = dot(normalize(lightDir),normalize(myNormal));
-              if (intensity > 0.8)
-                color *= vec4(1.0,1.0,1.0,1.0);
-              else if (intensity > 0.5)
-                color *= vec4(0.75,0.75,0.75,1.0);
-              else if (intensity > 0.1)
-                color *= vec4(0.5,0.5,0.5,1.0);
-              else
-                color = vec4(0.0,0.0,0.0,1.0);
+              intensity = dot( normalize( lightDir ), normalize( myNormal ) );
+              if ( intensity > 0.8 ) {
+                color *= vec4( 1.0, 1.0, 1.0, 1.0 );
+              } else if ( intensity > 0.5 ) {
+                color *= vec4( 0.75, 0.75, 0.75, 1.0 );
+              } else if ( intensity > 0.1 ) {
+                color *= vec4( 0.5, 0.5, 0.5, 1.0 );
+              } else {
+                color = vec4( 0.0, 0.0, 0.0, 1.0 );
+              }
               gl_FragColor = color;
             }
           updateFunction: |
