--- a/public/shader-material/index.vwf.yaml
+++ b/public/shader-material/index.vwf.yaml
@@ -61,20 +61,20 @@ children:
             void main( void ) {
               vec4 color = texture2D( texture, vUv );
               float depth = gl_FragCoord.z / gl_FragCoord.w;
-              depth = 1.0 - ( depth - distance ) / 200.0;
+              depth = ( depth - distance ) / 200.0;
               color.r *= ( sin( time * 0.75 ) + 0.75 ) * 0.25 + depth;
               color.g *= ( sin( time ) + 0.75 ) * 0.25 + depth;
               color.b *= ( sin( time * 1.25 ) + 0.75 ) * 0.25 + depth;
               float intensity;
               intensity = dot( normalize( lightDir ), normalize( myNormal ) );
               if ( intensity > 0.8 ) {
-                color *= vec4( 1.0, 1.0, 1.0, 1.0 );
-              } else if ( intensity > 0.5 ) {
-                color *= vec4( 0.75, 0.75, 0.75, 1.0 );
+                color.rgb *= 1.0;
+              } else if ( intensity > 0.4 ) {
+                color.rgb *= 0.75;
               } else if ( intensity > 0.1 ) {
-                color *= vec4( 0.5, 0.5, 0.5, 1.0 );
+                color.rgb *= 0.5;
               } else {
-                color = vec4( 0.0, 0.0, 0.0, 1.0 );
+                color.rgb *= 0.0;
               }
               gl_FragColor = color;
             }
