--- a/public/shader-material/index.vwf.config.yaml
+++ b/public/shader-material/index.vwf.config.yaml
@@ -13,7 +13,7 @@
 
 ---
 info:
-  title: "VWF Duck Application"
+  title: "Shader Material Example"
 model:
   vwf/model/threejs:
   vwf/model/buzz:
