--- a/support/proxy/vwf.example.com/sceneGetter.vwf.yaml
+++ b/support/proxy/vwf.example.com/sceneGetter.vwf.yaml
@@ -36,13 +36,26 @@ methods:
 
   # A helper that does basically what Find does, except that it handles some of
   #   the busywork (and assumes that we'll be looking in the scene).
+  # NOTE: THIS ONLY GETS THE FIRST OBJECT FOUND.  If you want the whole array,
+  #   you'll need to extend this function (or write another).
   # Arguments: 
-  #   objectName  - the string to search for
+  #   objectName      - the name of the object to search for
+  #   errorOnNotFound - if true (the default) we log an error if the object is
+  #                     not found.
+  #   warnOnTooMany   - if true (the default) we log a warning if more than one
+  #                     object is found.
   findInScene:
 
   # Same as findInScene, except that this looks by type rather than by name.
+  # NOTE: THIS ONLY GETS THE FIRST OBJECT FOUND.  If you want the whole array,
+  #   you'll need to extend this function (or write another).
   # Arguments: 
-  #   typeName    - the type to search for
+  #   typeName        - the type to search for (where the "type" is the filename 
+  #                     that the object extends).
+  #   errorOnNotFound - if true (the default) we log an error if the object is
+  #                     not found.
+  #   warnOnTooMany   - if true (the default) we log a warning if more than one
+  #                     object is found.
   findTypeInScene:
 
 scripts:
