Use a `sed` backup extension for compatibility with both Linux and BSD.

--- a/support/client/Rakefile
+++ b/support/client/Rakefile
@@ -63,7 +63,7 @@ task :version do
   # Patch lib/version.js.
 
   if release || build
-    sh "sed", "-i", "",
+    sh "sed", "-i.bak",
       %Q{/version.*version-identifier/s/"[^"]*", "[^"]*"/"#{release}", "#{build}"/},
       "lib/version.js"
   end
