Updates the documentation

--- a/support/proxy/vwf.example.com/light.vwf.yaml
+++ b/support/proxy/vwf.example.com/light.vwf.yaml
@@ -27,7 +27,7 @@ properties:
 
   castShadows: false
   
-  ## The type of light (point, directional, spot)
+  ## The type of light (point, directional, spot, hemisphere)
   ## 
   ## @name light.vwf#lightType
   ## @property
